Minor code cleanup (toList instead of collect(Collectors.toList()).