@@ -55,8 +55,6 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
-import java.util.function.UnaryOperator;
-import java.util.stream.Collectors;
 
 /**
  * Provides a base implementation for all import handlers which mainly takes care of the convenience methods.
@@ -379,7 +377,8 @@ public abstract class BaseImportHandler<E extends BaseEntity<?>> implements Impo
     protected E newEntity() {
         try {
             return (E) descriptor.getType().getConstructor().newInstance();
-        } catch (NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException e) {
+        } catch (NoSuchMethodException | InvocationTargetException | InstantiationException |
+                 IllegalAccessException e) {
             throw Exceptions.handle()
                             .error(e)
                             .withSystemErrorMessage("Cannot create an instance of: %s", descriptor.getType().getName())
@@ -427,7 +426,7 @@ public abstract class BaseImportHandler<E extends BaseEntity<?>> implements Impo
                          .map(Property::getName)
                          .map(Mapping::named)
                          .filter(this::isAutoImportMappingAccepted)
-                         .collect(Collectors.toList());
+                         .toList();
     }
 
     /**
@@ -629,7 +628,7 @@ public abstract class BaseImportHandler<E extends BaseEntity<?>> implements Impo
                                                                                                                name)));
         }
         Collections.sort(priorizedList);
-        return priorizedList.stream().map(Tuple::getSecond).map(Mapping::toString).collect(Collectors.toList());
+        return priorizedList.stream().map(Tuple::getSecond).map(Mapping::toString).toList();
     }
 
     protected boolean isExportable(UserInfo currentUser, Property property) {
